fixing bg behind sidebar

--- a/webroot/css/ays.css
+++ b/webroot/css/ays.css
@@ -1001,20 +1001,23 @@ input, textarea, select, .uneditable-input ,.select-group .btn {-webkit-border-r
 	left: -10px;
     top: 200px;
 }
-.single #search-form:before{
+
+.single #sidebar-right:before{
 	background: none repeat scroll 0 0 #009DBB;
     content: "";
     display: block;
     height: 220px;
-    margin-left: -60px;
-    margin-top: -20px;
+    margin-left: -40px;
+    margin-top: 0;
     position: absolute;
     width: 350px;
     z-index: -5;
 }
-.product-page #search-form:before{
-	margin-top: -197px;
+.product-page #sidebar-right:before{
+	margin-top: 0;
 	height: 200px;
+	width: 340px;
+	margin-left: -30px;
 }
 /*DETAIL PRODUCT CAROUSEL*/
 #carousel-detail{margin-bottom: 0; width: 580px; height: 435px; padding: 0 0 0 0;}
@@ -1096,7 +1099,15 @@ input, textarea, select, .uneditable-input ,.select-group .btn {-webkit-border-r
 .coupon-img{margin-bottom:20px;}
 .coupon{background:transparent url(../img/bg_coupon.png) 0 100% no-repeat;padding-bottom:23px;margin: 0 0 20px 0;width:100%;}
 .detail_coupon {}
-.detail_coupon .highlight{background:#000;color:#fff;padding:20px; position:realtive;z-index:2;font-size:24px;font-weight:bold;;}
+.detail_coupon .highlight{
+	background:#000;
+	color:#fff;
+	padding:20px; 
+	position:realtive;
+	z-index:2;
+	font-size:24px;
+	font-weight:bold;
+}
 .detail_coupon .page_ttre {margin:20px 0;color:#000;}
 .detail_coupon .detail_desc h2.ttre{color:#000;font-size:16px;}
 
